gatekeeper-templates/sample-case-gatekeeper/ConstraintTemplate_requiredimagetag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagetag
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImageTag
      validation:
        openAPIV3Schema:
          type: object
          properties:
            substr:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredimagetag

        get_tag(image) = tag {
          not contains(image, ":")
          tag := ""
        }
        get_tag(image) = tag {
          contains(image, ":")
          idx := indexof(image, ":")
          tag := substring(image, idx+1, count(image))
        }

        violation[{"msg": msg}] {
          object := input.review.object
          containers := object.spec.containers
          some c
          tag := get_tag(containers[c].image)

          required_substr := input.parameters.substr

          not contains(tag, required_substr)

          msg := sprintf("imageタグ部分に'%v'を含めてください: %v", [required_substr, containers[c].image])
        }
